--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ Homestead.yaml
 Homestead.json
 .env
 /.idea/webServers.xml
+/.idea/blade.xml
+/.idea/misc.xml
+/.idea/copyright/
+/.idea/modules.xml
+/.idea/SisInset.iml
