--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
+
         "laravel/framework": "5.2.*",
         "doctrine/dbal": "^2.5"
     },
     "require-dev": {
+        "fzaninotto/faker": "~1.4",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
